# diy-bacnet-server

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.bacpypes  HOME_ASSISTANT_MQTT_CHEATSHEET.md  README.md  client_tester.py  config.json  docker-compose.yml  docker-entrypoint.sh  docker_readme.md  hvac_server_points.csv  pyproject.toml  requirements.txt  swagger.json
.github/workflows/: ci.yml  docs-pages.yml  docs-pdf.yml
_tmp_wheel/: diy_bacnet_server-0.1.0-py3-none-any.whl
bacpypes_server/: client_utils.py  env_features.py  errors.py  fastapi_jsonrpc_compat.py  main.py  modbus_routes.py  modbus_service.py  models.py  mqtt_bridge.py  mqtt_rpc_gateway.py  rdf_scan.py  rest_openfdd_aliases.py  rest_whois_nested.py  routes.py  rpc_app.py  rpc_auth.py  rpc_methods.py  server_utils.py  web_app.py
docs/: 404.md  _config.yml  bacpypes3-cli.md  ci-and-publishing.md  client-bacnet.md  csv-points.md  environment.md  getting-started.md  index.md  json-rpc.md  modbus-tcp.md  mqtt.md  server-rpc.md
pdf/: diy-bacnet-server-docs.txt
scripts/: build_docs_pdf.py  test_bench_hammer.py
tests/: TESTING.md  docker-compose.yml  test_docker_bacnet_server.py  test_docs_integrity.py  test_env_features.py  test_modbus_routes.py  test_modbus_service.py  test_models.py  test_mqtt_bridge.py  test_mqtt_rpc_gateway.py  test_rest_openfdd_aliases.py  test_rest_whois_nested.py  test_rpc_and_client_utils.py  test_rpc_auth_http.py  test_rpc_auth_install.py  test_rpc_parse_and_contract.py  test_server_utils.py  test_server_utils_csv_config.py
